--- a/static/index.html
+++ b/static/index.html
@@ -207,6 +207,16 @@ pre{
   overflow:auto;
 }
 
+#layout{
+  padding:14px 16px 18px;
+  border-top:1px solid rgba(15,23,42,0.08);
+}
+
+#layout .layout-empty{
+  color:var(--muted);
+  font-size:12px;
+}
+
 /* 小屏适配 */
 @media (max-width: 980px){
   .grid{ grid-template-columns:1fr; }
@@ -477,6 +487,7 @@ th{
 
 <h3>详细测算</h3>
 <pre id="out" class="muted" style="background:#fff; color:var(--text); border:1px solid var(--border);"></pre>
+<div id="layout"></div>
 
 </div>
 
@@ -566,6 +577,7 @@ th{
       if (!res.ok) {
         const t = await res.text();
         $('out').innerText = "计算失败：" + t;
+        $('layout').innerHTML = "";
         return;
       }
 
@@ -630,12 +642,161 @@ th{
       const remark = "备注：如需详细的场站设计方案（CAD设计图）、产品配置方案及参数、请致电1*********。";
 
         $('out').innerText = summary + "\n\n" + lines.join("\n") + "\n" + remark;
+        renderLayoutSVG(d);
 
     } catch (e) {
       console.error(e);
       $('out').innerText = "前端异常：" + (e?.message || e);
+      $('layout').innerHTML = "";
     }
   }
+
+  function renderLayoutSVG(data) {
+    const container = $('layout');
+    const rowCount = Number(data.row_count || 0);
+    const stallsDraw = Number(data.stalls_per_row_draw || 0);
+
+    if (!rowCount || !stallsDraw) {
+      container.innerHTML = '<div class="layout-empty">当前参数下无法生成简易布局图。</div>';
+      return;
+    }
+
+    const STALL_WIDTH_M = 6;
+    const STALL_LEN_M = 15;
+    const scale = 5;
+    const stallW = STALL_WIDTH_M * scale;
+    const stallL = STALL_LEN_M * scale;
+    const lane = stallL;
+
+    const margin = 20;
+    const pileW = Math.max(8, Math.round(stallW * 0.16));
+    const pileH = Math.max(14, Math.round(stallL * 0.2));
+    const txW = Math.max(58, Math.round(stallW * 1.6));
+    const txH = Math.max(22, Math.round(stallL * 0.34));
+
+    const drawStalls = (shapes, y, stallsCount, fill, stroke) => {
+      for (let i = 0; i < stallsCount; i++) {
+        const x = margin + i * stallW;
+        shapes.push(`<rect x="${x}" y="${y}" width="${stallW}" height="${stallL}" fill="${fill}" stroke="${stroke}"/>`);
+      }
+    };
+
+    const drawTransformer = (shapes, y) => {
+      const txX = margin + (stallsDraw * stallW) / 2 - txW / 2;
+      const txY = y + stallL / 2 - txH / 2;
+      shapes.push(`<rect x="${txX}" y="${txY}" width="${txW}" height="${txH}" fill="#fde68a" stroke="#92400e"/>`);
+      shapes.push(`<text x="${txX + txW / 2}" y="${txY + txH / 2 + 4}" text-anchor="middle" font-size="12">变压器</text>`);
+    };
+
+    const drawPilesBy2Stalls = (shapes, yTop) => {
+      const pileCount = Math.floor(stallsDraw / 2);
+      for (let p = 0; p < pileCount; p++) {
+        const xMid = margin + (p * 2 + 1) * stallW;
+        shapes.push(`<rect x="${xMid - pileW / 2}" y="${yTop}" width="${pileW}" height="${pileH}" fill="#dc2626"/>`);
+      }
+    };
+
+    // 单排：按后端拆分结果绘制左右 + 中间变压器
+    if (rowCount === 1) {
+      const left = Number(data.stalls_left || 0);
+      const right = Number(data.stalls_right || 0);
+      if (left + right !== stallsDraw || left < 0 || right < 0) {
+        container.innerHTML = '<div class="layout-empty">单排拆分数据异常，无法绘图。</div>';
+        return;
+      }
+
+      const topY = margin + pileH + 12;
+      const totalW = margin * 2 + stallsDraw * stallW;
+      const totalH = topY + stallL + margin;
+      const shapes = [];
+
+      // 左右两侧车位（保持后端拆分口径）
+      for (let i = 0; i < left; i++) {
+        const x = margin + i * stallW;
+        shapes.push(`<rect x="${x}" y="${topY}" width="${stallW}" height="${stallL}" fill="#dbeafe" stroke="#1e40af"/>`);
+      }
+      for (let i = 0; i < right; i++) {
+        const x = margin + (left + i) * stallW;
+        shapes.push(`<rect x="${x}" y="${topY}" width="${stallW}" height="${stallL}" fill="#dbeafe" stroke="#1e40af"/>`);
+      }
+
+      // 单排桩：每2车位一桩，位于车位前方（靠电缆沟）
+      drawPilesBy2Stalls(shapes, margin + 4);
+
+      // 变压器位于左右中间
+      const txX = margin + left * stallW - txW / 2;
+      const txY = topY + stallL / 2 - txH / 2;
+      shapes.push(`<rect x="${txX}" y="${txY}" width="${txW}" height="${txH}" fill="#fde68a" stroke="#92400e"/>`);
+      shapes.push(`<text x="${txX + txW / 2}" y="${txY + txH / 2 + 4}" text-anchor="middle" font-size="12">变压器</text>`);
+
+      container.innerHTML = `<svg viewBox="0 0 ${totalW} ${totalH}" width="100%" height="${totalH}" xmlns="http://www.w3.org/2000/svg">
+        <text x="${margin}" y="14" font-size="12" fill="#334155">单排简易布局（左${left}+右${right}；通道=车位长度）</text>
+        ${shapes.join('')}
+      </svg>`;
+      return;
+    }
+
+    // 多排：2排一个背靠背模块；模块间留 lane；奇数最后一排单排模块
+    const modulePairH = stallL + lane + stallL;
+    const moduleSingleH = stallL;
+    const moduleGap = lane;
+
+    const fullPairs = Math.floor(rowCount / 2);
+    const hasLastSingle = rowCount % 2 === 1;
+    const totalModulesHeight = fullPairs * modulePairH + (hasLastSingle ? moduleSingleH : 0) + Math.max(0, fullPairs + (hasLastSingle ? 1 : 0) - 1) * moduleGap;
+
+    const totalW = margin * 2 + stallsDraw * stallW;
+    const totalH = margin * 2 + totalModulesHeight;
+    const shapes = [];
+
+    let cursorY = margin;
+    let rowIdx = 0;
+
+    for (let m = 0; m < fullPairs; m++) {
+      const topRowY = cursorY;
+      const laneY = topRowY + stallL;
+      const bottomRowY = laneY + lane;
+
+      // 上下排车位
+      drawStalls(shapes, topRowY, stallsDraw, '#e2e8f0', '#334155');
+      drawStalls(shapes, bottomRowY, stallsDraw, '#e2e8f0', '#334155');
+
+      // 中间通道
+      shapes.push(`<rect x="${margin}" y="${laneY}" width="${stallsDraw * stallW}" height="${lane}" fill="#f8fafc" stroke="#cbd5e1"/>`);
+
+      // 背靠背桩：每2车位宽一台，布置在中间通道靠中线
+      const pileCount = Math.floor(stallsDraw / 2);
+      for (let p = 0; p < pileCount; p++) {
+        const xMid = margin + (p * 2 + 1) * stallW;
+        const yMid = laneY + lane / 2 - pileH / 2;
+        shapes.push(`<rect x="${xMid - pileW / 2}" y="${yMid}" width="${pileW}" height="${pileH}" fill="#dc2626"/>`);
+      }
+
+      // 每排都显示变压器（x一致）
+      drawTransformer(shapes, topRowY);
+      drawTransformer(shapes, bottomRowY);
+
+      shapes.push(`<text x="${margin}" y="${topRowY - 4}" font-size="11" fill="#475569">第${rowIdx + 1}排</text>`);
+      shapes.push(`<text x="${margin}" y="${bottomRowY - 4}" font-size="11" fill="#475569">第${rowIdx + 2}排</text>`);
+
+      rowIdx += 2;
+      cursorY += modulePairH + moduleGap;
+    }
+
+    if (hasLastSingle) {
+      const y = cursorY;
+      drawStalls(shapes, y, stallsDraw, '#e2e8f0', '#334155');
+      drawPilesBy2Stalls(shapes, y - pileH - 4);
+      drawTransformer(shapes, y);
+      shapes.push(`<text x="${margin}" y="${y - 4}" font-size="11" fill="#475569">第${rowIdx + 1}排</text>`);
+    }
+
+    container.innerHTML = `<svg viewBox="0 0 ${totalW} ${totalH}" width="100%" height="${totalH}" xmlns="http://www.w3.org/2000/svg">
+      <text x="${margin}" y="14" font-size="12" fill="#334155">多排简易布局（背靠背模块+模块间通道，通道=车位长度）</text>
+      ${shapes.join('')}
+    </svg>`;
+  }
+
 
   async function exportWord() {
     try {
